Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.6.6: July 11th, 2011

* make use/useq/usev extremely obnoxious towards offending devs who use them
  in global scope when they're not supposed to.  Pretty much, I'm tired of
  pkgcore being broken for being PMS compliant; as such I'm now pointing
  users loud and clear at the offenders.

* fix traceback in user profile support (/etc/portage/profiles).


pkgcore 0.6.5: Jun 22nd, 2011

* Log an error, rather than throwing an exception when binpkg cache cannot
  be updated.  Needs refinement long term, but for average users, this is
  preferable.

* loosen up pebuild a bit; choose the max version if slot/repo are all the
  same.  This allows pebuild dev-util/nano to choose 2.3.1 for example.

* tighten up econf implementation; ctarget/cbuild are now forced as early
  arguments to configure to work around some misbehaviours in configure
  scripts (broken scripts, but so it goes).

* tighten up ebuild environments variable handling- had a bleed through
  of variable 'x' that was breaking mesa builds.

* yet another src_install fix for EAPI=4; this time ensuring the default
  function is available.

* we now run bashrcs (profile and user) every phase to match portage
  behaviour.  If folks desire it, a patch making that optional would be
  welcome.

* add support for /etc/portage/package.env and /etc/portage/env/.  Note
  that we only allow settings there to affect the bash environment- trying
  to adjust FEATURES from those files isn't on the intended support list.

* use ${LIBDIR_${ABI}} for ccache/distcc pathways; gentoo bug 355283.

* profile interpretation of make.defaults now has access to variables
  defined by it's parents, per PMS.


pkgcore 0.6.4: Jun 5th, 2011

* intercept and suppress exceptions from triggers unless the trigger
  explicitly disables it.

* work around libmagic python bindings sucking and not always being