@@ -3,6 +3,8 @@ Pkgcore Release Notes
 
 See ChangeLog for full commit logs; this is summarized/major changes.
 
+* pmaint copy arguments have changed; check the help, short version,
+  it's now sane.
 
 pkgcore 0.6.6: July 11th, 2011
 
